20040703 libspectrum.h.in,rzx.c,doc/libspectrum.txt: add ability to
	 select the format of the embedded snap in .rzx files.
20040706 acinclude.m4: distribute the Glib 1.2 and Glib 2.x autoconf
	 macros.
20040707 autogen.sh: add --copy to automake invocation.
20040709 configure.in: bump version number to 0.2.2pre1.
20040709 TAG: libspectrum_0_2_2pre1
20040715 README,doc/libspectrum.3: doc updates for 0.2.2.
20040715 z80.c: fix possible segfault if a snap had a page 19 (Stuart).
20040715 szx.c: bump .szx minor version number to 1.3.
20040716 configure.in: bump version number to 0.2.2.
20040718 autogen.sh: add libtoolize.
20040721 accessor.pl,snap_accessors.txt,z80.c: Add issue 2 keyboard support.
20040722 szx.c: add issue 2 keyboard support.
20040722 snapshot.c: initialise issue 2 keyboard setting.
20040806 libspectrum.h.in,snapshot.c,szx.c,z80.c,doc/libspectrum.txt: Add new
         LIBSPECTRUM_FLAG_SNAPSHOT_ALWAYS_COMPRESS flag for use with
         libspectrum_snap_write
20040814 configure.in,dll.c,internals.h,zlib.c: small Visual C++
	 compatability fixes.
20040814 generate.pl.in,libspectrum.h.in,make-perl.c: more Visual C++
	 compatability fixes.
20040905 libspectrum.h.in,rzx.c: support multiple input recording blocks
	 in an RZX file.
20040906 crypto.c,libspectrum.h.in,rzx.c: re-add support for creator and
	 signature blocks in RZX files.
20040909 rzx.c: fix RZX digital signatures.
20040909 libspectrum.h.in,rzx.c: update libspectrum_rzx_write API for
	 multiple IRB files.
20040910 libspectrum.h.in,rzx.c: implement RZX rollback.
20040918 libspectrum.h.in,rzx.c: allow RZX rollback to arbitrary points.
20041025 accessor.pl,internals.h,libspectrum.c,libspectrum.h.in,
         snap_accessors.txt,snapshot.c,szx.c,z80.c,doc/libspectrum.txt: Add
         support for connected joystick information in snapshots.
20041031 .cvsignore: ignore stamp-h1.
20041125 Makefile.am,libspectrum.h.in,microdrive.c: very simple .mdr
         handling.